frontend: hides user menu, fixed displaying saved credit card on mobile, INERTIA label on customer account page navigates to landing page, removed redundant options in user menu, fixed form container and reduced heading sizes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -630,6 +630,9 @@
     .booking-responsive-mobile {
         display: initial !important;
     }
+    .dropDownMenu {
+        display: none !important;
+    }
     .booking-responsive {
         display: none;
     }
@@ -717,7 +720,7 @@
     }
 
     .input-form {
-        padding-left: 0 !important;
+        padding-left: 20px !important;
     }
 
     .manager-vert-navbar {
